[package]
name = "silent-payments-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
silentpayments = "0.1"
bitcoin = "0.31"
secp256k1 = "0.28"
env_logger = "0.11"
log = "0.4"
libbitcoinkernel-sys = { path = "../rust-bitcoinkernel/libbitcoinkernel-sys" }
